Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-93605

PointLight is not properly projected on skinned meshes

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 6.1.1, 6.2.0 Alpha, 6.2
    • 6.1.0 Beta3
    • Quick: 3D
    • None
    • Windows
    • 5
    • b6d50420300363bc73788245695f0316c86762f0 (qt/qtquick3d/dev) 6977f4dfacd4acf30069ae19fdf62b214a774b4b (qt/qtquick3d/6.1)

      PointLighs are not correctly projected on skinned meshes. The projection light spot is projected away from the light source (see the image). 

        1. pointlight.7z
          1.74 MB
          alexey89
        2. pointlight1.png
          249 kB
          alexey89
        For Gerrit Dashboard: QTBUG-93605
        # Subject Branch Project Status CR V

            inho Inho Lee
            alexey89 alexey89
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes