Fix modelMatrix for skinned meshes

The modelMatrix of a skinned mesh should be a globalTransform of
Skeleton.

Fixes: QTBUG-93605
Pick-to: 6.1
Change-Id: I9a85fac5b574f25dbf0f4b4d43abc0304e1e438b
Reviewed-by: Andy Nichols <andy.nichols@qt.io>